# RXNParadigm

./: .gitignore  AGENTS.md  README.md  THIRD_PARTY_NOTICES.md  dft_atom_variable_extractor.py  generic_smiles_extractor.py  pyproject.toml  requirements.txt  role_atom_canonicalizer.py  role_canonical_graph_builder.py  role_molecode_converter.py  role_smiles_summary.py  ssh-keygen -t rsa -C 12332037@zju.edu.cn  ssh-keygen -t rsa -C 12332037@zju.edu.cn.pub  yieldgnn_graph_adapter.py
1. End‑to‑End Reaction Graph Construction/: dft_fixed_role_graph_builder.py  literature_cross_role_bond_tool.py  literature_evidence_retriever.py  ml_graph_csv_exporter.py  role_graph_dft_aligner.py  sample_graph_dataset_builder.py  skill_loader.py  skill_schema.py
1. End‑to‑End Reaction Graph Construction/MoleCode-main/: requirements.txt
1. End‑to‑End Reaction Graph Construction/ontology/: site_ontology.yaml
1. End‑to‑End Reaction Graph Construction/reaction_graph_agent/: __init__.py  agent.py  eval.py  llm.py  reporting.py
1. End‑to‑End Reaction Graph Construction/skills/: dySKILL.yaml
1. End‑to‑End Reaction Graph Construction/tests/: test_dft_atom_variable_extractor.py  test_dft_fixed_role_graph_builder.py  test_literature_cross_role_bond_tool.py  test_literature_evidence_retriever.py  test_ml_graph_csv_exporter.py  test_reaction_graph_agent.py  (+2 more)
MoleCode-main/: README.md  pyproject.toml
MoleCode-main/examples/: 02_polymer_roundtrip.py  03_markush_roundtrip.py  05_generation.py  07_reasoning.py  README.md  _llm.py
MoleCode-main/molecode/: __init__.py
MoleCode-main/molecode/markush/: __init__.py  graph.py  rdkit_to_mermaid.py
MoleCode-main/molecode/molecule/: __init__.py
MoleCode-main/molecode/polymer/: polymer_to_mermaid.py
MoleCode-main/molecode/prompts/: __init__.py  molecule_system_prompt.py
RXNSelector/: .gitignore  README.md  RELEASE_NOTES.md  USER_GUIDE.md  pyproject.toml
RXNSelector/configs/: reaction_dft_screening.yaml
RXNSelector/dft_preprocess_agent/: __init__.py  cli.py
RXNSelector/dft_preprocess_agent/core/: engine.py  registry.py  state.py
RXNSelector/dft_preprocess_agent/screening/: analysis.py  selection.py
RXNSelector/docs/: agent_screening_protocol.md  config_example_annotated.md  release_checklist.md  skill_workflow_design.md
RXNSelector/examples/: reaction_yield_expected_30.yaml
RXNSelector/scripts/: run_reaction_screening.py  start_streamlit.py
RXNSelector/skills/benchmark_validate/: identity.yaml  tool.py
RXNSelector/skills/dataset_profile/: identity.yaml  tool.py
RXNSelector/skills/dependency_screening/: identity.yaml  tool.py
RXNSelector/skills/feature_selection_from_chains/: identity.yaml  tool.py
RXNSelector/skills/final_feature_export/: identity.yaml  tool.py
RXNSelector/skills/grouped_correlation/: identity.yaml  tool.py
RXNSelector/skills/llm_chain_decomposition/: identity.yaml  tool.py
RXNSelector/skills/mutual_information/: identity.yaml  tool.py
RXNSelector/skills/residual_collinearity_check/: identity.yaml  tool.py
RXNSelector/skills/ridge_dependency_graph/: identity.yaml  tool.py
RXNSelector/tests/: test_reaction_benchmark.py
RXNSelector/ui/: streamlit_app.py
reaction_graph_agent/: profiler.py
skills/: azSKILL.yaml  suSKILL.yaml
tests/: test_generic_smiles_extractor.py  test_role_atom_canonicalizer.py  test_role_graph_dft_aligner.py  test_role_molecode_converter.py  test_role_smiles_summary.py  test_sample_graph_dataset_builder.py  test_yieldgnn_graph_adapter.py
(+15 files in other folders)
