[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reaction-graph-constructor"
version = "0.1.0"
description = "MoleCode-grounded, knowledge-augmented reaction graph construction utilities."
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "PyYAML",
    "pydantic>=1.10,<2",
    "rdkit",
    "networkx",
    "openpyxl",
]

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools]
packages = ["reaction_graph_agent"]
py-modules = [
    "dft_atom_variable_extractor",
    "dft_fixed_role_graph_builder",
    "generic_smiles_extractor",
    "literature_cross_role_bond_tool",
    "literature_evidence_retriever",
    "ml_graph_csv_exporter",
    "role_atom_canonicalizer",
    "role_canonical_graph_builder",
    "role_graph_dft_aligner",
    "role_molecode_converter",
    "role_smiles_summary",
    "sample_graph_dataset_builder",
    "skill_loader",
    "skill_schema",
    "yieldgnn_graph_adapter",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
