[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "molecode"
version = "0.1.0"
description = "An LLM-native, graph-explicit molecular language (Mermaid-based) for molecules, polymers, and Markush structures."
readme = "PYPI_README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "AtomFlow-AI" }]
keywords = [
    "chemistry", "cheminformatics", "molecular-representation", "smiles",
    "mermaid", "llm", "rdkit", "polymers", "markush", "molecode",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "rdkit>=2022.9",
    "networkx>=2.6",
]

[project.urls]
Homepage = "https://github.com/AtomFlow-AI/MoleCode"
Repository = "https://github.com/AtomFlow-AI/MoleCode"
Paper = "https://arxiv.org/abs/2605.16480"
Website = "https://atomflow-ai.com/"

[project.optional-dependencies]
viz = ["pillow"]

[tool.setuptools.packages.find]
include = ["molecode*"]
