[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rxnselector"
version = "0.1.0"
description = "RXNSelector: an auditable reaction feature-screening workflow."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "RXNSelector contributors" }
]
keywords = [
  "reaction",
  "feature-selection",
  "ridge-regression",
  "mutual-information",
  "streamlit",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
  "numpy",
  "openpyxl",
  "pandas",
  "pyarrow",
  "PyYAML",
  "scikit-learn",
  "streamlit",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "twine",
]

[project.scripts]
rxnselector = "dft_preprocess_agent.cli:main"
rxnselector-ui = "dft_preprocess_agent.cli:ui_main"

[tool.setuptools.packages.find]
include = ["dft_preprocess_agent*"]
